--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>CANDY BAR</h1>
         </header>
-        <button id="start-button">StartGame</button>
+        <button class="start">Start Game</button>
         <div id="score"><span>0</span> pts</div>
         <div id="game"></div>
         <script src="main.js"></script>
