--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </section>
 
         <section id="jeux">
+            <div id="sphere">
+                <span id="secDec" class="number">0</span><span id="secUni" class="number">0</span><span>:</span><span id="milDec" class="number mill">0</span><span id="milUni" class="number mill">0</span>
+            </div>
             <div id="score"><span>0</span> pts</div>
             <div id="game">
                 <div id="resultat">
@@ -47,6 +50,7 @@
                 </div>
             </div>
         </section>
-        <script src="main.js"></script>
+        <script src="javascript/chronometer.js"></script>
+        <script src="javascript/index.js"></script>
     </body>
 </html>
