animation AP canvas OK

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     </head>
     <body>
+    
         <header>
-            <h1>CANDY BAR</h1>
-        </header>
-
-        <button class="start">TRY ME</button>
+            <h1><img src="./images/bonbon8.png" alt=""> CANDY BAR <img src="./images/bonbon8.png" alt=""></h1>  
+        </header> 
+        <button class="start">TRY ME</button>       
         <section id="acceuil">
             <div class="informations">
                 <h3>How To Play?</h3>
@@ -43,14 +43,16 @@
             <div id="sphere">
                 <span id="secDec" class="number">0</span><span id="secUni" class="number">0</span><span>:</span><span id="milDec" class="number mill">0</span><span id="milUni" class="number mill">0</span>
             </div>
-            <div id="score"><span>0</span> pts</div>
             <div id="game">
                 <div id="resultat">
                     <p>WINNER N:</p><span></span>
                 </div>
+                <div id="score"><span>0</span> pts</div>
             </div>
+            <div id="sound" class="soundOn"></div>
         </section>
         <script src="javascript/chronometer.js"></script>
         <script src="javascript/index.js"></script>
+        <script src="javascript/animation.js"></script>
     </body>
 </html>
